samples/_failures_safe/1761490222_6d77c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_81d734b8.c: In function ‘main’:
./samples/SAFE/__tmp_81d734b8.c:149:5: error: expected declaration or statement at end of input
  149 |     while (1) {
      |     ^~~~~
./samples/SAFE/__tmp_81d734b8.c:149:5: error: expected declaration or statement at end of input
